# LevelEditor

./: CMakeLists.txt  main.cpp  resource.qrc
level/: level_generator_t.cpp  level_generator_t.h  level_optimizator_t.cpp  level_optimizator_t.h  level_t.cpp  level_t.h  point_t.cpp  point_t.h  square_t.cpp  square_t.h
source/: Bonus.cpp  Bonus.h  EditorWindow.cpp  EditorWindow.h  Grass.cpp  Grass.h  GridItem.cpp  GridItem.h  GridItemBuilder.cpp  GridItemBuilder.h  LevelSettingDialog.cpp  LevelSettingDialog.h  Objects.cpp  Objects.h  SceneGraphicsView.cpp  SceneGraphicsView.h
